--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,3 +37,9 @@ steps:
     SolutionPath: $(solution.path)
     SolutionName: $(solution.name)
   displayName: 'Solution Packager: pack solution'
+
+- task: PublishBuildArtifacts@1
+  inputs:
+    pathtoPublish: $(Build.ArtifactStagingDirectory)
+    artifactName: drop
+  displayName: 'Publish build artifacts'
